# allo

./: CMakeLists.txt  README.md  build.zig  build.zig.zon  flake.nix
include/: allo.h
include/allo/: abstracts.h  allocator_interfaces.h  block_allocator.h  c_allocator.h  heap_allocator.h  make_into.h  memory_map.h  memory_map_alloc.h  memory_tree.h  on_destroy.h  oneshot_allocator.h  pool_allocator.h  properties.h  properties_of.h  region_allocator.h  reservation_allocator.h  rtti.h  scratch_allocator.h  segmented_array_allocator.h  stack_allocator.h  status.h  threadsafe_allocator.h  typed_allocation.h  typed_freeing.h  typed_reallocation.h
include/allo/ctti/: typename.h
include/allo/ctti/detail/: algorithm.h  algorithm.hpp  cstring.h  cstring.hpp  hash.h  name_filters.h  pretty_function.h
include/allo/detail/: abort.h  abstracts.h  alignment.h  asserts.h  bytes_collection.h  cache_line_size.h  calculate_segment_size.h  destruction_callback.h  forward_decls.h  is_threadsafe.h  is_threadsafe_runtime.h  round_up_to_multiple_of.h  usage_profiling_callback.h
include/allo/impl/: abstracts.h  all.h  allocator_interfaces.h  block_allocator.h  bytes_collection.h  c_allocator.h  heap_allocator.h  oneshot_allocator.h  region_allocator.h  reservation_allocator.h  scratch_allocator.h  segmented_array_allocator.h  stack_allocator.h  threadsafe_allocator.h
include/allo/structures/: any_allocator.h  collection.h  list.h  segmented_list.h  segmented_stack.h  stack.h  uninitialized_array.h
tests/: doctest.h  generic_allocator_tests.cpp  generic_allocator_tests.h  heap_tests.cpp  heap_tests.h  profiling.cpp  test_header.h  testing_types.h
tests/allocator_interfaces/: allocator_interfaces.cpp
tests/block_allocator_t/: block_allocator_t.cpp
tests/collection_t/: collection_t.cpp
tests/heap_allocator_t/: heap_allocator_t.cpp
tests/list_t/: list_t.cpp
tests/memory_map/: memory_map.cpp
tests/nonvirtual_inheritance/: nonvirtual_inheritance.cpp
tests/pool_allocator_generational_t/: pool_allocator_generational_t.cpp
tests/scratch_allocator_t/: scratch_allocator_t.cpp
tests/segmented_stack_t/: segmented_stack_t.cpp
tests/stack_allocator_t/: stack_allocator_t.cpp
tests/stack_t/: stack_t.cpp
